--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -175,6 +175,7 @@ legend {
 }
 textarea {
   overflow: auto;
+  width: 100%!important;
 }
 optgroup {
   font-weight: bold;
@@ -1095,6 +1096,9 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  color: #555;
+  display: block;
+  width: 200px;
 }
 a {
   color: #337ab7;
@@ -4493,8 +4497,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  /* background-color: #f8f8f8; */
-  /* border-color: #e7e7e7; */
+  background-color: #f8f8f8;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
 }
