--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ nav ul li a {
   font-size: 1.2em;
 }
 
+h3 {
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+h4 {
+  color: #555;
+}
+
 .login-panel {
   margin-top: 13px;
   float: right;
@@ -32,41 +40,176 @@ nav ul li a {
 /* content */
 .post {
   padding: 15px;
-  border-bottom: 1px dotted #ccc;
+}
+
+.post h3 {
+  color: #777;
 }
 
 .post:last-child {
   border: none;
 }
 
+.post .date{
+  margin-bottom: 10px;
+}
+
 .post p {
   padding: 15px;
+  border-bottom: 1px solid #ccc;
+}
+.post a {
+  color: #000;
+}
+.post a:hover{
+  text-decoration: none;
+}
+
+.views {
+  float: right;
 }
 
 /* sidebar */
+.popular-post h3{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  padding-left: 20px;
+}
 
+.popular-post img{
+  width: 200px;
+  height: auto;
+  float: left;
+  width: 150px; 
+  height: auto;
+  Float: left;
+  margin-right: 10px;
+  margin-left: 10px;
+}
 
-.widget {
+.popular-post a {
+  color: #000;
+}
+
+.popular-post-content p{
+  padding: 0 10px 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.sidebar author{
+  padding: 10px;
+}
+
+.sidebar .date{
+  font-size: .8em;
+} 
+
+.author p{
+  font-size: .8em;
+  color: #555;
+}
+
+.author-comm{
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.author-comm em{
+  font-size: .7em;
+}
+
+.gravatar-img {
+  width: 65px;
+  height: auto;
+  float: left;
+  margin-right: 10px;
+}
+
+.comm-text p{
+  background-color: #f5f5f5;
+  padding: 5px;
+}
+.comm-text a{
+   color: #000; 
+}
+
+.comm-body {
+  display: block;
+  margin-bottom: 30px;
+}
+
+.latest-comments h3{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  padding-left: 20px;
+}
+
+.post-comments h3 {
+  margin-bottom: 50px;
+}
+
+.whole-post {
+  background-color: #f5f5f5;
+  border-bottom: none;
+  padding: 15px;
+}
+
+.post-content-full p {
+  padding: 15px;
+}
+
+.message-body {
+  background-color: #f5f5f5;
+  padding: 15px;
+}
+
+.message-body form{
   display: block;
 }
-
-.popular-post-widget h3 {
-  border-top: 1px dotted #ccc;
-  border-bottom: 1px dotted #ccc;
-  padding: 15px 10px;
+.message-body label{
+  display: block;
+}
+.message-body input{
+  display: block!important;
+  margin-bottom: 20px;
+  padding: 5px;
 }
 
-.recent-comment-widget h3 {
-  border-top: 1px dotted #ccc;
-  border-bottom: 1px dotted #ccc;
-  padding: 15px 10px;
+textarea {
+  width: 100%;
 }
 
-.categories-widget h3 {
-  border-top: 1px dotted #ccc;
-  border-bottom: 1px dotted #ccc;
-  padding: 15px 10px;
+.msg-btn {
+  border: none;
+  background-color: #000;
+  color: #fff;
+  padding: 5px 10px;
 }
+
+.login-logo{
+  float: left;
+  margin-right: 50px;
+}
+
+.center{
+  margin: 20% auto;
+}
+
+.form{
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.sub-btn{
+  border: none;
+  background-color: #000;
+  color: #fff;
+  margin-top: 20px;
+  width: 100px;
+  padding: 5px 0;
+}
+
 
 
 /* footer */
